# rouge_galaxy

./: .gitignore  grabber.sh  meson.build  todo.org
assets/: UNIFONT_LICENCE.txt
src/: colors.h  enitity.c  entity.h  entityList.c  entityList.h  entity_list.c  entity_list.h  game.c  game.h  interface.c  interface.h  list.c  list.h  main.c  map.c  map.h  meson.build  player.c  player.h  textGridRenderer.c  textGridRenderer.h  ui.c  ui.h  uiInput.c  uiInput.h  utils.c  utils.h  vecMath.c  vecMath.h  wfc.c  wfc.h
src/.deps/: main.Po  rouge_galaxy-main.Tpo
tests/: meson.build  test_main.c  test_main.h  test_math.c
